Fixes spacing

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -910,7 +910,7 @@ footer {
 	font-size: smaller;
 	list-style: none;
 	flex: auto 1 1;
-	margin: -1.1em 0.5em 0.5em 0.5em;
+	margin: -0.5em 0.5em 0.5em 0.5em;
 
 	li {
 		display: flex;
@@ -1170,7 +1170,7 @@ img.center {
 	}
 
 	.donate-tiers-features {
-		margin: -1.1em -0.25em 0.5em -0.25em;
+		margin: -0.5em -0.25em 0.5em -0.25em;
 		font-size: 0.9em;
 	}
 
